[project]
name = "biteagle-backend"
version = "0.1.0"
description = "Biteagle API Backend"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.58.0",
    "colorama>=0.4.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
