[project]
name = "biteagle-backend"
version = "0.1.0"
description = "Biteagle API Backend"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.58.0",
    "colorama>=0.4.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pgvector>=0.3",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "grandalf>=0.8",
    "aio-pika>=9.6.2",
    "redis>=7.4.0",
    "fastapi>=0.135.3",
    "oss2>=2.19.1",
    "pypdf>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
